--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -274,9 +274,11 @@
             <div class="col-md-3">
               <!-- BEGIN PORTLET-->
                 <div class="portlet">
-                  
+                  <div class="portlet-title line">
+                    
+                  </div>
                   <div class="portlet-body" id="chats">
-                    <p>{{ _('Accounts  pages includes a detailed page for each customer, partner, or investor in your ecosystem. You and your co-workers can collaborate to get a deep understanding.') }}</p>
+                    <p>{{ _('Accounts  pages includes a detailed page for each customer, partner, or investor in your ecosystem.') }}</p>
                     
                   </div>
                 </div>
