--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -155,44 +155,14 @@
             
             
           </div>
-          <div class="col-md-5" ng-show="accounts+isFiltering">
-               
-                    <form class=" ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
-                      <div class="input-group">
-                        <input type="text" ng-model="searchQuery" typeahead="result as result.name  for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="form-control" placeholder="{{ _('Quick Filtering') }}">
-                        <span class="input-group-btn">
-                          <button class="gbqfb gbqfb-hvr" type="button"><i class="icon-filter"></i></button>
-                        </span>
-                      </div>
-                     
-                    </form>
-                 
-            </div>
-            <div class="col-md-2" ng-show="accounts+isFiltering">
-              <div class="btn-group btn-sort">
-                    <a class="btn btn-default" href="#" data-toggle="dropdown">
-                    {{ _('Sort by') }}
-                    <i class="icon-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
-                      <li><a ng-click="orderBy('name')" href="#" data-toggle="modal">{{ _('Name') }}</a></li>
-                      
-                     
-                    </ul>
-              </div>
-
-            </div>
         </div>
-        <hr/>
-        
             <div class="row cards-container">
 
             <div class="col-md-9">
              <div class="inner-cards-container waterfall" ng-hide="blankStateaccount">
                 <div droppable  ng-repeat="account in accounts" data-column="<%=getPosition($index)%>" class="cardElement" ng-drop="dropTag(account)">
                 <div class="industrySection">
-                      <img class="industryPics" src="static/img/food_industry.jpg">
+                      <img class="industryPics" src="static/img/industry.jpg">
                       
                 </div>
         <div class="detailsSection">
@@ -207,7 +177,7 @@
             <div class="clearfix"></div>
           </div>
         </div>
-        <div class="tagsSection">
+        <div class="tagsSection" ng-class="{hidden: account.tags==null}">
             <div class="sectionContent">
                  <a ng-repeat="tag in account.tags" href="/#/search/type:Account tags:<%=tag.id%>"> <span class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
                  </a>
@@ -286,7 +256,7 @@
                 });
           </script>
             <div class="col-md-3">
-              <div class="portlet">
+              <div class="portlet cardElement labelsCard">
                 <div class="portlet-title">
                   <div class="caption">
                     <!-- class="fa fa-reorder"--><i></i>Labels
@@ -372,7 +342,7 @@
     }
     handleUniform();
     $('.waterfall').waterfall({ 
-        colMinWidth: 200, 
+        colMinWidth: 210, 
         defaultContainerWidth: 800,
         autoresize: true
     });
