finishing cards design for show and new pages
Former-commit-id: 5179cdc1d68ca78d6c6e97ab26b3163ab8ed1147

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -140,7 +140,7 @@
         </div>
        </div>
          <!-- BEFORE DELETE MODEL END-->
-      <div ng-show="isContentLoaded">
+      <div ng-show="isContentLoaded" class="showPage">
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
