--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -145,7 +145,7 @@
           
         <div class="row "  >
             
-          <div class="col-md-2">
+          <div class="col-md-9">
 
           
             
@@ -153,7 +153,17 @@
                     {{ _("New Account") }} <i class="icon-plus"></i>
                     </a>
                
-            
+          <div class="pagination pull-right" >
+
+                   <button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="pagination.prev">
+                    <i class="fa fa-chevron-left"></i>
+                    </button>
+                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/"><%= page.id %></a></li>
+                   <button ng-click="listNextPageItems()"  class="btn"  ng-show="pagination.next">
+                    <i class="fa fa-chevron-right"></i> 
+                    </button>
+                      
+            </div>
             
           </div>
           
@@ -261,25 +271,6 @@
               </div>
                 <div class="clearfix"></div>
               </div><!--/inner-cards-container-->
-               <div class="row">
-          <div class="col-md-12">
-              <div class="pagination pull-right" >
-                  
-                 
-                   <button ng-click="listPrevPageItems()" id="sample_editable_1_new" class="btn" ng-show="pagination.prev">
-                    {{_("Prev")}} 
-                    </button>
-                    <li ng-repeat="page in pagination.pages" ng-class='{active: page.isCurrent}'><a  href="#/accounts/"><%= page.id %></a></li>
-                   <button ng-click="listNextPageItems()"  class="btn"  ng-show="pagination.next">
-                    {{_("Next")}} 
-                    </button>
-                
-              
-                </div>
-                <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _('Loading') }}...</h3-->
-          </div>
-          
-          </div>
               </div>
             <script type="text/javascript">
               $('#slimtest1').slimScroll({
@@ -337,8 +328,8 @@
                   </div>
                   </div>
                 </form>
-                <div class="form-group" ng-show="tags">
-                  <button class="btn btn-default btn-block" ng-click="manage_tags=!manage_tags;manage()"> Manage Tags</button>
+                <div class="form-group btn-manage-tags" ng-show="tags">
+                  <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()"> Manage Tags</button>
                 </div>
                   
                 </div>
