--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -48,7 +48,7 @@
           </span>
     </div>
   </div>
-  <div class="" >
+  <div class="showPage" >
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
