--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -216,7 +216,7 @@
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        
+        <div class="showPage">
           <!-- Filtering and sorting -->
           <div class="row">
           <div class="col-md-9">
@@ -716,6 +716,7 @@
               </div>
           </div>
           </div> 
+          </div>
           <div class="row">
             <div class="pagination pull-right" ng-hide="isLoading">
                   
