--- a/templates/base.html
+++ b/templates/base.html
@@ -386,6 +386,8 @@
 
 
             var callback = function() {
+              console.log('*************************************');
+              console.log(gapi.client);
         if (--apisToLoad == 0) {
           apiLoaded();
         }
