bcc or forward email to iogrow message updated
Former-commit-id: 47ba043a8b9eaedccdceb6d7fab6b3dd8e0a158a

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -199,7 +199,7 @@
                            <div class="col-md-12 margin-bottom-10"> 
                               <p class⁼"lead"="">
                                 
-                                  {{ _("You can forward or BCC an email to this address:") }}
+                                  {{ _("To add an outside email to this account, forward or BCC to:") }}
                                   <a href="mailto:{{ME}}@gcdc2013-iogrow.appspotmail.com">{{ME}}@gcdc2013-iogrow.appspotmail.com</a><br/>
                                   {{ _("Or just add notes to remember what's important.") }}<br/>
 
