delete session check on welcome page
Former-commit-id: 3243383f292627d9880eb7fe7c36de0a7ad55e10

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -140,11 +140,11 @@
         </div>
        </div>
          <!-- BEFORE DELETE MODEL END-->
-      <div ng-show="isContentLoaded" class="showPage">
+      <div ng-show="isContentLoaded" class="row">
         
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
-        <div class="row">
+        <div class="col-md-9 showPage">
           <div class="col-md-1" style="padding-bottom: 15px;">
               <div class="pic">
                             <a href="/#/accounts/show/4820258976169984" class="startup-link" title="Zesty"><img alt="Zesty" class="angel_image" data-id="126085" data-type="Startup" src="https://s3.amazonaws.com/photos.angel.co/startups/i/126085-4af1a2b184ccd1f1e2e140f9149617bb-thumb_jpg.jpg?buster=1383554004" data-hasqtip="2" style="width: 80px;height: 76px; border: 1px solid #eaeaea;"></a>
@@ -170,8 +170,7 @@
               <hr/>
               
             </div>
-        </div>
-        
+                 
 
             
             <div class="row">
@@ -987,8 +986,11 @@
               
               <!-- END PORTLET-->
             </div>
-            <div class="col-md-3">
+            </div>   
+        </div>
+        <div class="col-md-3 ">
               <!-- BEGIN PORTLET-->
+              <div class="showPage">
               <div class="portlet">
                 <div class="portlet-title line">
                   <div class="caption"><i class="icon-tasks"></i>Tasks & Events</div>
@@ -1150,16 +1152,12 @@
                 </div>
               </div>
               
-              
+              </div>
               <!-- END PORTLET-->
+              
             </div>
-            </div>
-            
-                                  
 
-          
-            
-          
+                  
         
         <!-- END PAGE CONTENT-->
       </div>
