--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -145,12 +145,12 @@
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
         <div class="showPage col-md-9">
-        <div class="row">
-          <div class="col-md-2" >
+        <div class="row margin-bottom-10">
+          <div class="col-md-2" ng-mouseenter="showUpload= true" ng-mouseleave="showUpload = false">
               <div class="pic">
-                           <img ng-hide="account.logo_img_id" alt="Zesty" class="thumbnail angel_image" data-id="126085" data-type="Startup" src="https://s3.amazonaws.com/photos.angel.co/startups/i/126085-4af1a2b184ccd1f1e2e140f9149617bb-thumb_jpg.jpg?buster=1383554004" data-hasqtip="2">
+                           <img ng-hide="account.logo_img_id" alt="Zesty" class=" angel_image" data-id="126085" data-type="Startup" src="/static/img/default_company.png" data-hasqtip="2">
                </div>  
-               <a href="" class="btn btn-default btn-upload">
+               <a ng-show="showUpload"   ng-click="createPickerUploader()" href="" class="btn btn-default btn-upload" data-toggle="modal">
                  <img src="/static/img/upload_logo.png">
                </a>
             </div>
@@ -190,10 +190,6 @@
               <div class="col-md-12">
               <!-- BEGIN PORTLET-->
               <div id="account-tab" class="portlet paddingless">
-                <div class="portlet-title line">
-                  <div class="caption">{{ _("Account Feeds") }}</div>
-                  
-                </div>
                 <div class="portlet-body">
                   <!--BEGIN TABS-->
                   <div class="tabbable tabbable-custom">
